# Stripe-BillingLakehouse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
bootstrap/: bootstrap_dim_customer.py  bootstrap_dim_customers.py  bootstrap_erp_account_master_snapshot.py  bootstrap_erp_plan_catalog.py  bootstrap_erp_usage_daily.py  bootstrap_gold.py  bootstrap_ops.py  bootstrap_schemas.py  bootstrap_stripe_customers.py  bootstrap_stripe_invoices.py  bootstrap_stripe_subscription_items.py  bootstrap_stripe_subscriptions.py
bootstrap/bronze/: bootstrap_dim_plan.py
configs/: dev.yaml  prod.yaml
dags/: billinglakehouse_bootstrap.py  billinglakehouse_pipeline.py  billinglakehouse_pipeline_dry_run.py  billinglakehouse_test_dag.py  billinglakehouse_tests_dag.py
docs/: ARCHITECTURE.md  DATABRICKS_JOBS.md  DATA_MODEL.md  SETUP.md  TESTING.md
docs/test-results/: unit_tests_result.txt
jobs/: bootstrap.py  bronze_run.py  extract_rest_to_landing.py  run_bootstrap.py  run_bronze.py
jobs/bootstrap/: run_bootstrap.py
jobs/bronze/: extract_rest_to_landing.py  run_bronze.py
jobs/gold/: run_gold_dim_account_master.py  run_gold_dim_plan_catalog.py  run_gold_dim_stripe_customers.py  run_gold_dim_stripe_subscriptions.py  run_gold_fact_stripe_invoices.py  run_gold_fact_stripe_subscription_items.py  run_gold_fact_usage_daily.py
jobs/silver/: run_silver_erp_account_master_snapshot.py  run_silver_erp_plan_catalog.py  run_silver_erp_usage_daily.py  (+4 more)
tests/: billinglakehouse_tests_dag.py  run_bootstrap_test.py  test_env.py  testdag.py
(+43 files in other folders)
